updated code to include new features up to java 17 and fixed some typos